==> Lizzie-Tsai/LoRa-Long-Distance-Device-Control-and-Communication-System-Project/Program_1/Src/SX1278/platform/sx12xxEiger/sx1276-Hal.c <==
#include "platform.h"
#include "spi.h"
#include "../../radio/sx1276-Hal.h"
#include "main.h"
#define RESET_IOPORT                                GPIOG
#define RESET_PIN                                   GPIO_PIN_13
#define NSS_IOPORT                                  GPIOA
#define NSS_PIN                                     GPIO_PIN_8     //ԭGPIO_Pin_15
#define DIO0_IOPORT                                 GPIOG
#define DIO0_PIN                                    GPIO_PIN_9
#define DIO1_IOPORT                                 GPIOD
#define DIO1_PIN                                    GPIO_PIN_5
#define DIO2_IOPORT                                 GPIOD
#define DIO2_PIN                                    GPIO_PIN_7
#define DIO3_IOPORT                                 GPIOD
#define DIO3_PIN                                    GPIO_PIN_11
#define DIO4_IOPORT                                 GPIOE
#define DIO4_PIN                                    GPIO_PIN_15
#define DIO5_IOPORT                                 GPIOD
#define DIO5_PIN                                    GPIO_PIN_8
#define RXTX_IOPORT
#define RXTX_PIN                                    FEM_CTX_PIN
#define RXE_PORT       			GPIOA
#define RXE_PIN  						GPIO_PIN_2
#define RXE_CLOCK  				RCC_APB2Periph_GPIOA
#define RXE_HIGH()         		HAL_GPIO_WritePin(RXE_PORT,RXE_PIN,GPIO_PIN_SET)//; GPIO_SetBits(RXE_PORT,RXE_PIN)

void SX1276InitIo( void )
{
//     GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitTypeDef  GPIO_InitStruct;
  
	__GPIOG_CLK_ENABLE();
	GPIO_InitStruct.Pin = DIO0_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
  HAL_GPIO_Init(DIO0_IOPORT, &GPIO_InitStruct);
	
	GPIO_InitStruct.Pin =  RESET_PIN;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init( RESET_IOPORT, &GPIO_InitStruct );
	
//	
//  /* Enable the GPIO_LED Clock */
//  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOG, ENABLE);
// GPIO_InitStructure.GPIO_Pin = DIO0_PIN;
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
//  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(DIO0_IOPORT, &GPIO_InitStructure);
//	

//	 			GPIO_InitStructure.GPIO_Pin =  RESET_PIN;
//			GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//			GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
//			GPIO_Init( RESET_IOPORT, &GPIO_InitStructure );
//	
	
	
	
//     RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOB |
//                             RCC_APB2Periph_GPIOC | RCC_APB2Periph_GPIOD | RCC_APB2Periph_GPIOE | RCC_APB2Periph_AFIO, ENABLE );

//     GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;
//     GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
// //      // Configure SPI-->NSS as output
// //     GPIO_InitStructure.GPIO_Pin = NSS_PIN;
// //     GPIO_Init( NSS_IOPORT, &GPIO_InitStructure );
// // 	GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_SET );

// // 	
// // 	//配置射频开关芯片控制管脚   RXE-->CTRL   TXE--> /CTRL
// // 	GPIO_InitStructure.GPIO_Pin = RXE_PIN;
// // 	GPIO_Init(RXE_PORT, &GPIO_InitStructure);

// // 	GPIO_InitStructure.GPIO_Pin = TXE_PIN;
// // 	GPIO_Init(TXE_PORT, &GPIO_InitStructure);	
// // 	//默认设设置为接收状态
// // 	Set_RF_Switch_RX();	
// // 	
//     // Configure radio DIO as inputs
//     GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
// 	if(MachType==MASTER){
// 		  GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_11;
// 			GPIO_Init( GPIOB, &GPIO_InitStructure );
// 	}else{
//     // Configure DIO0
//     GPIO_InitStructure.GPIO_Pin =  DIO0_PIN;
//     GPIO_Init( DIO0_IOPORT, &GPIO_InitStructure );
// 	}
// //     // Configure DIO1
// //     GPIO_InitStructure.GPIO_Pin =  DIO1_PIN;
// //     GPIO_Init( DIO1_IOPORT, &GPIO_InitStructure );
// //     
// //     // Configure DIO2
// //     GPIO_InitStructure.GPIO_Pin =  DIO2_PIN;
// //     GPIO_Init( DIO2_IOPORT, &GPIO_InitStructure );
// //     
// //     // REAMARK: DIO3/4/5 configured are connected to IO expander

// //     // Configure DIO3 as input
// //     GPIO_InitStructure.GPIO_Pin =  DIO3_PIN;
// //     GPIO_Init( DIO3_IOPORT, &GPIO_InitStructure );
// //     // Configure DIO4 as input
// //     GPIO_InitStructure.GPIO_Pin =  DIO4_PIN;
// //     GPIO_Init( DIO4_IOPORT, &GPIO_InitStructure );
// //     // Configure DIO5 as input
// // 	GPIO_InitStructure.GPIO_Pin =  DIO5_PIN;
// //     GPIO_Init( DIO5_IOPORT, &GPIO_InitStructure );
// 		
// 		if(MachType==MASTER){
// 			GPIO_InitStructure.GPIO_Pin =  RESET_PIN;
// 			GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
// 			GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
// 			GPIO_Init( RESET_IOPORT, &GPIO_InitStructure );
// 		}else{
// 			GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_8;
// 			GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
// 			GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
// 			GPIO_Init( GPIOA, &GPIO_InitStructure );
// 		}
}

void SX1276SetReset( uint8_t state )
{
    if( state == RADIO_RESET_ON )
    {

		// Set RESET pin to 0
       // GPIO_WriteBit( RESET_IOPORT, RESET_PIN, Bit_RESET );
				//if(MachType==MASTER)
					//GPIO_ResetBits(RESET_IOPORT,RESET_PIN);
				HAL_GPIO_WritePin(RESET_IOPORT,RESET_PIN,GPIO_PIN_RESET);
				//else GPIO_ResetBits(GPIOA,GPIO_Pin_8);
					
    }
    else
    {

		
		// Set RESET pin to 1
				//if(MachType==MASTER)
				//	GPIO_SetBits(RESET_IOPORT,RESET_PIN);
			HAL_GPIO_WritePin(RESET_IOPORT,RESET_PIN,GPIO_PIN_SET);
				//else GPIO_SetBits(GPIOA,GPIO_Pin_8);

    }
}

void SX1276WriteBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
    uint8_t i;

    //NSS = 0;
    
			//if(MachType==MASTER)GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_RESET );
			//else GPIO_WriteBit( GPIOA, GPIO_Pin_4, Bit_RESET );
	//GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_RESET );
		HAL_GPIO_WritePin(NSS_IOPORT,NSS_PIN,GPIO_PIN_RESET);
	

    SpiInOut( addr | 0x80 );
    for( i = 0; i < size; i++ )
    {
        SpiInOut( buffer[i] );
    }

    //NSS = 1;
		
			//if(MachType==MASTER)GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_SET );
			//else GPIO_WriteBit( GPIOA, GPIO_Pin_4, Bit_SET );
	//	GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_SET );
		HAL_GPIO_WritePin(NSS_IOPORT,NSS_PIN,GPIO_PIN_SET);

}

void SX1276ReadBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
    uint8_t i;

    //NSS = 0;
   	//if(MachType==MASTER)GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_RESET );
		//	else GPIO_WriteBit( GPIOA, GPIO_Pin_4, Bit_RESET );
		//GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_RESET );
			HAL_GPIO_WritePin(NSS_IOPORT,NSS_PIN,GPIO_PIN_RESET);

    SpiInOut( addr & 0x7F );

    for( i = 0; i < size; i++ )
    {
        buffer[i] = SpiInOut( 0 );

    }
//GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_SET );
		HAL_GPIO_WritePin(NSS_IOPORT,NSS_PIN,GPIO_PIN_SET);

    //NSS = 1;
   	//		if(MachType==MASTER)GPIO_WriteBit( NSS_IOPORT, NSS_PIN, Bit_SET );
//			else GPIO_WriteBit( GPIOA, GPIO_Pin_4, Bit_SET );
}

inline uint8_t SX1276ReadDio0( void )
{
	//printf("IO:%d\r\n",HAL_GPIO_ReadPin( DIO0_IOPORT, DIO0_PIN ));
	if(MachType==MASTER){
		// GPIO_ReadInputDataBit( GPIOB, GPIO_Pin_11 );
	}
	else{
    return HAL_GPIO_ReadPin( DIO0_IOPORT, DIO0_PIN );
	}
}

inline uint8_t SX1276ReadDio1( void )
{
    return HAL_GPIO_ReadPin( DIO1_IOPORT, DIO1_PIN );
}

inline uint8_t SX1276ReadDio2( void )
{
    return HAL_GPIO_ReadPin( DIO2_IOPORT, DIO2_PIN );
}

inline uint8_t SX1276ReadDio3( void )
{
    return HAL_GPIO_ReadPin( DIO3_IOPORT, DIO3_PIN );
}

inline uint8_t SX1276ReadDio4( void )
{
    return HAL_GPIO_ReadPin( DIO4_IOPORT, DIO4_PIN );
}

inline uint8_t SX1276ReadDio5( void )
{
    return HAL_GPIO_ReadPin( DIO5_IOPORT, DIO5_PIN );
}
